--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "helmet": "^3.12.1",
+    "moment": "^2.22.2",
     "mongodb": "^3.0.10",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
