--- a/.dockerignore
+++ b/.dockerignore
@@ -2,3 +2,8 @@ node_modules
 npm-debug.log
 awskey
 mainuser-key-pair-uswest.pem
+mongoSeed.csv
+seedMoreData.csv
+my-ec2-key-pair.pem
+seedMoreData.csv.zip
+mongoSeed.csv.zip
