--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "helmet": "^3.12.1",
     "moment": "^2.22.2",
     "mongodb": "^3.0.10",
+    "newrelic": "^4.2.0",
     "nodemon": "^1.17.5",
     "pg": "^7.4.3",
     "react": "^16.4.0",
